# vibe

./: .firebaserc  .gitattributes  .gitignore  CLAUDE.md  EMOTION_ANALYTICS_INTEGRATION.md  EMOTION_QUICK_REFERENCE.md  EMOTION_TRACKING_IMPLEMENTATION.md  FINAL_INTEGRATION_CHECKLIST.md  FORMAL_SPECIFICATIONS.md  LICENSE  PRODUCT_REQUIREMENTS_DOCUMENT_ACTUAL.md  README.md  TESTING.md  TODO.md  ViBe_Formal_Specification.md  convert_segbot_to_onnx.py  convert_whisper_to_onnx.py  data.txt  firebase.json  local_development_run_guide.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-all.ps1  run-all.sh  setup.py
backend/lms_engine/: .flake8  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.sh
backend/lms_engine/.devcontainer/: devcontainer.json
backend/lms_engine/core/: asgi.py  permissions.py  settings.py  urls.py  v1_urls.py  wsgi.py
backend/lms_engine/core/assessment/: admin.py  apps.py  constants.py  serializers.py  urls.py
backend/lms_engine/core/auth/: constants.py  permissions.py  urls.py
backend/lms_engine/core/authentication/: apps.py  firebase.py  urls.py  views.py
backend/lms_engine/core/course/: admin.py  apps.py  constants.py  serializers.py  signals.py  urls.py
backend/lms_engine/core/docs/: apps.py  urls.py  views.py
backend/lms_engine/core/institution/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/lms_engine/core/settings/: base.py  development.py  production.py
(+2388 files in other folders)
